--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -168,6 +168,20 @@ body {
     padding-bottom: 80px;
 }
 
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+
+}
+
+#loading h2{
+    font-size: 8rem;
+    color: var(--color-principal);
+}
+
 #content .cards-container{
     display: grid;
     grid-auto-rows: auto;
@@ -190,8 +204,12 @@ body {
     border-radius: 20px;
     height: 286px;
     width: 224px;
-    box-shadow: 10px 10px 0px 0px rgba(255, 255, 255, 0.5);
     position: relative;
+    transition: .4s;
+}
+
+.card:hover{
+    transform: scale(1.1, 1.1)
 }
 
 .pokemon-id{
@@ -279,6 +297,10 @@ footer ul a{
         font-size: 2.3rem;
     }
 
+    #loading h2{
+        font-size: 6rem;
+    }
+
     #content .cards-container{
         grid-template-columns: repeat(3, 124px);
         grid-column-gap: 30px;
@@ -330,7 +352,9 @@ footer ul a{
 
 @media(max-width: 500px) {
 
-    
+    #loading h2{
+        font-size: 4rem;
+    }
     
     #content .cards-container{
         grid-template-columns: repeat(2, 124px);
